# policyguard

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  interviewprep.md  pom.xml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py
data/fixtures/: gold-set.json
docs/: architecture.md
scripts/: bench_query.py  demo.sh
src/jmh/java/com/policyguard/bench/: JmhRunner.java  QueryServiceBenchmark.java
src/main/java/com/policyguard/: PolicyguardApplication.java
src/main/java/com/policyguard/config/: AiConfig.java  EmbeddingDimAssertionRunner.java  PolicyguardProperties.java
src/main/java/com/policyguard/demo/: DemoSeeder.java
src/main/java/com/policyguard/domain/: Answer.java  AuditLog.java  Document.java  DocumentChunk.java  Query.java  ReviewQueueItem.java
src/main/resources/: application-lmstudio.yml  application-openrouter.yml  application-stub.yml  application-test.yml  application.yml
src/main/resources/db/migration/: V1__init_schema.sql
src/policyguard/: __init__.py  config.py  deps.py  main.py
src/policyguard/api/: routes.py
src/policyguard/eval/: cli.py  harness.py
src/policyguard/fixtures/: factory.py  seed.py
src/policyguard/models/: __init__.py
src/policyguard/providers/: __init__.py
src/policyguard/services/: audit.py  chunking.py  citation.py  gate.py  ingestion.py  pii.py  query.py  retrieval.py  review.py  risk.py  rrf.py
src/test/java/com/policyguard/: PolicyguardApplicationTests.java
tests/it/: test_pipeline_it.py
tests/unit/: test_core_services.py  test_stub_providers.py
(+83 files in other folders)
