[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "policyguard"
version = "1.0.0"
description = "Compliance RAG + PII Redaction Gateway (Python / FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.0",
  "pgvector>=0.3.6",
  "alembic>=1.14.0",
  "pydantic-settings>=2.6.0",
  "openai>=1.55.0",
  "redis>=5.2.0",
  "python-multipart>=0.0.17",
  "pypdf>=5.1.0",
  "reportlab>=4.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "testcontainers[postgres,redis]>=4.8.0",
]

[project.scripts]
policyguard = "policyguard.main:run"
policyguard-eval = "policyguard.eval.cli:main"
policyguard-seed = "policyguard.fixtures.seed:main"

[tool.hatch.build.targets.wheel]
packages = ["src/policyguard"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "it: integration tests requiring Docker/Testcontainers",
]
filterwarnings = ["ignore::DeprecationWarning"]
